--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "eslint": "^8.24.0",
     "typescript": "^4.8.3",
-    "vite": "^3.1.3"
+    "vite": "^3.1.3",
+    "vue-router": "^4.1.6"
   },
   "eslintConfig": {
     "extends": "@antfu"
